<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="280dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/featured_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/pubmat_abuse1"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/featured_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_card_c"
            android:textAlignment="textStart"
            android:layout_marginTop="4dp"
            android:textColor="@color/mid_black"
            android:textSize="13sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/featured_desc"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/info_card_c1"
            android:textAlignment="textStart"
            android:layout_margin="3dp"
            android:justificationMode="inter_word"
            android:textColor="@color/slight_black"
            android:textSize="9.5sp"
            android:textStyle="italic">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_card_c2"
            android:textAlignment="textEnd"
            android:layout_marginTop="2dp"
            android:textColor="@color/LightOrange31b"
            android:textSize="10sp"
            android:textStyle="bold|italic"/>


    </LinearLayout>




</androidx.cardview.widget.CardView>