<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".other_sevices_offered">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:paddingTop="95dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-black"
            android:text="@string/add_serv_a"
            android:textColor="@color/LightOrange31b"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:paddingTop="130dp"
            android:text="@string/add_serv_a1"
            android:textColor="@color/Gray"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:typeface="normal" />


    </LinearLayout>

    <Button
        android:id="@+id/btnBack_others_1"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="#00FFFFFF"
        app:fabCustomSize="40dp"
        app:icon="@drawable/ic_back_35dp"
        app:iconTint="@color/LicensetoChill" />

    //rehab section
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="4dp"
        android:columnCount="2">

        <LinearLayout
            android:id="@+id/btn_doh"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="-5dp"
            android:background="@color/LicensetoChill"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_doh" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/white"
                android:text="DEPARTMENT OF HEALTH"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </GridLayout>


    //counselling section
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="4dp"
        android:columnCount="2">

        <LinearLayout
            android:id="@+id/btn_wcpd"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="-5dp"
            android:background="@color/SuperLight_Light"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_wcpd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/LightDark"
                android:text="WOMEN AND CHILDREN PROTECTION DESK"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </GridLayout>


    //mental health clinics section
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="420dp"
        android:layout_marginRight="4dp"
        android:columnCount="2">

        <LinearLayout
            android:id="@+id/btn_brgy"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="-5dp"
            android:background="@color/superLightOrange31b"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_barangay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/white"
                android:text="BARANGAY PROTECTION ORDER"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </GridLayout>





    //bottom label

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">

        <TextView
            android:id="@+id/txtDes_comp_form1_pa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/add_serv_a2"
            android:textAlignment="center"
            android:textColor="@color/Gray"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:typeface="normal" />

    </LinearLayout>


</RelativeLayout>